# victrola

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  test_images.py
.github/workflows/: docker-publish.yml  tests.yml
src/: config.py
src/agent/: agent.py  config_utils.py  conversation.py  (+2 more)
tests/: conftest.py  test_compaction_agent.py  test_compaction_store.py  test_discord_serialization.py  test_env_isolation.py  test_mcp.py  test_mcp_oauth_patches.py  test_mcp_oauth_selfheal.py  test_mcp_oauth_storage.py  test_meet.py  test_memory_store.py  test_migration_skip.py  test_notify_signal.py  test_pr01_conversation_state.py  test_pr02_resource_cleanup.py  test_pr03_background_tasks.py  test_pr04_requires_net.py  test_pr05_secret_env_mapping.py  test_pr06_llm_retry.py  test_pr07_assert_replacement.py  test_pr08_sub_agent_key.py  test_pr09_rkey_validation.py  test_pr10_discord_allowlist.py  test_pr11_discord_timeout.py  test_pr12_scheduler_retry.py  test_pr13_scheduler_allowlist.py  test_pr14_separate_init.py  test_pr15_sqlite_transactions.py  test_pr16_store_conflict.py  test_pr17_deno_output.py  test_pr18_async_file_io.py  test_pr19_public_api.py  test_pr20_tui_fixes.py  test_schedule_timezone.py  test_signal_bot.py  test_timezone.py  test_tool_docs.py  test_tools_ts_isolation.py  test_triggers_approval.py  test_triggers_condition.py  (+5 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
(+127 files in other folders)
