[project]
name = "victrola"
version = "0.1.0"
description = "General-purpose personal AI agent harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.77.1",
    "click>=8.3.1",
    "discord.py>=2.4.0",
    "exa-py>=2.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "textual>=1.0.0",
]
